--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Max Site</title>
   <style>
     body {
-      background-color: #EAF6F6;
+      background-color: black;
     }
     hr{
       background-color: white;
