--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>Max Site</title>
   <style>
     body {
-      background-color: black;
+      background-color: #EAF6F6;
     }
     hr{
-      background-color: white;
+     
       border-style : none;
     }
   </style>
